domain name was changed

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Okan Vurdu
 email: okanvurdu@gmail.com
 description: Kişisel karalamalar ve deneyimlerin bir dökümü
 baseurl: ""
-url: "http://okanvurdu.com"
+url: "http://okanvurdu.net"
 twitter_username: vurdunio
 github_username:  okanvurdu
 
